--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="shortcut icon" href="static/img/Frame.png" type="image/png"> <! Иконка для сайта>
     <meta charset="UTF-8">
     <title>Williams Intellectual Property</title>
+    <script src="PageScripts.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
